--- a/iris-ann/project/params/train.yml
+++ b/iris-ann/project/params/train.yml
@@ -1,3 +1,3 @@
 DATASET: https://raw.githubusercontent.com/uiuc-cse/data-fa14/gh-pages/data/iris.csv
-DUMPED_DATA: output/all_input_data.pkl
+DUMPED_DATA: output/all_data.pkl
 MODEL: model/model.h5
